; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/mm/extr_pmb.c_pmb_list_del.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/mm/extr_pmb.c_pmb_list_del.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pmb_entry = type { %struct.pmb_entry* }

@pmb_list = common dso_local global %struct.pmb_entry* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pmb_entry*)* @pmb_list_del to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pmb_list_del(%struct.pmb_entry* %0) #0 {
  %2 = alloca %struct.pmb_entry*, align 8
  %3 = alloca %struct.pmb_entry**, align 8
  %4 = alloca %struct.pmb_entry*, align 8
  store %struct.pmb_entry* %0, %struct.pmb_entry** %2, align 8
  store %struct.pmb_entry** @pmb_list, %struct.pmb_entry*** %3, align 8
  br label %5

5:                                                ; preds = %19, %1
  %6 = load %struct.pmb_entry**, %struct.pmb_entry*** %3, align 8
  %7 = load %struct.pmb_entry*, %struct.pmb_entry** %6, align 8
  store %struct.pmb_entry* %7, %struct.pmb_entry** %4, align 8
  %8 = icmp ne %struct.pmb_entry* %7, null
  br i1 %8, label %9, label %22

9:                                                ; preds = %5
  %10 = load %struct.pmb_entry*, %struct.pmb_entry** %4, align 8
  %11 = load %struct.pmb_entry*, %struct.pmb_entry** %2, align 8
  %12 = icmp eq %struct.pmb_entry* %10, %11
  br i1 %12, label %13, label %18

13:                                               ; preds = %9
  %14 = load %struct.pmb_entry*, %struct.pmb_entry** %4, align 8
  %15 = getelementptr inbounds %struct.pmb_entry, %struct.pmb_entry* %14, i32 0, i32 0
  %16 = load %struct.pmb_entry*, %struct.pmb_entry** %15, align 8
  %17 = load %struct.pmb_entry**, %struct.pmb_entry*** %3, align 8
  store %struct.pmb_entry* %16, %struct.pmb_entry** %17, align 8
  br label %22

18:                                               ; preds = %9
  br label %19

19:                                               ; preds = %18
  %20 = load %struct.pmb_entry*, %struct.pmb_entry** %4, align 8
  %21 = getelementptr inbounds %struct.pmb_entry, %struct.pmb_entry* %20, i32 0, i32 0
  store %struct.pmb_entry** %21, %struct.pmb_entry*** %3, align 8
  br label %5

22:                                               ; preds = %13, %5
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
